feat(awg): added amnezia premium support
